# bili-sync-fav

./: .env  .gitignore  Cargo.toml  Dockerfile  bili-sync-fav.sh
.github/: README.md
src/: main.rs
